--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
         <div class="container">
-            <a class="navbar-brand" href="/"><img src="assets/images/logo-tomochain-white.svg" alt="logo-tomodex"></a>
+            <a class="navbar-brand" href="/"><img src="assets/images/logo-tomodex.svg" alt="logo-tomodex"></a>
             <button class="navbar-toggler navbar-toggler-right collapsed" type="button" data-toggle="tab"
                 data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -93,8 +93,9 @@
                 <div class="box-btn mt-3 pt-3 mt-md-5 pt-md-5">
                     <a class="btn btn-primary d-flex d-md-inline-flex align-items-center justify-content-center"
                         href="/trade"><i class="dex-multiline_chart"></i> Start Trading</a>
-                    <a class="btn btn-primary-transparent d-flex d-md-inline-flex align-items-center justify-content-center ml-md-3 mt-3 mt-md-0"
-                        href="#"><i class="dex-play_circle_outline"></i> Watch videos</a>
+                    <span id="btn_scroll_to" class="btn btn-primary-transparent d-flex d-md-inline-flex align-items-center justify-content-center ml-md-3 mt-3 mt-md-0">
+                        <i class="dex-play_circle_outline"></i> Watch videos
+                    </a>
                 </div>
             </div>
         </div>
@@ -246,10 +247,10 @@
             </div>
         </div>
     </section>
-    <section class="section-default">
+    <section class="section-default mt-0 pt-lg-5">
         <div class="container">
             <div class="row">
-                <div class="col-lg-6 pr-lg-5">
+                <div class="col-lg-6 pr-lg-5 mt-5">
                     <div class="common-preview">
                         <h2 class="common-title">How to start trading</h2>
                     </div>
@@ -264,18 +265,32 @@
                             <p class="font-weight-bold">Trade</p>
                         </div>
                     </div>
-                    <div class="trading-preview mb-5 mb-lg-0">
+                    <div class="trading-preview">
                         <h3 class="tmp-title-large">No Deposit. No Withdrawal. No Risk.</h3>
                         <p class="opacity-60">Maintain complete custody of your tokens by trading directly from your own wallet</p>
                     </div>
                 </div>
-                <div class="col-lg-6">
-                    <div class="tab-content" id="tradingTabContent">
+                <div id="watch-videos" class="col-lg-6">
+                    <div class="tab-content mt-5" id="tradingTabContent">
                         <div class="tab-pane fade show active" id="trading-spot" role="tabpanel" aria-labelledby="trading-spot-tab">
-                            <img class="w-100" src="assets/images/dex-video-tutorials-trading.png" alt="">
+                            <a href="javascript:void(0)" class="video1">
+                                <img class="w-100" src="assets/images/dex-video-tutorials-trading.png" alt="">
+                            </a>
+                            <div class="vidBox1">
+                                <div class="videCont1">
+                                    <iframe class="v1" src="https://www.youtube.com/embed/k5ziJlU1w4w" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                </div>
+                            </div>
                         </div>
                         <div class="tab-pane fade" id="trading-lending" role="tabpanel" aria-labelledby="trading-lending-tab">
-                            <img class="w-100" src="assets/images/dex-video-tutorials-trading.png" alt="">
+                            <a href="javascript:void(0)" class="video2">
+                                <img class="w-100" src="assets/images/dex-video-tutorials-trading.png" alt="">
+                            </a>
+                            <div class="vidBox2">
+                                <div class="videCont1">
+                                    <iframe class="v2" src="https://www.youtube.com/embed/W581FlByr7I" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <ul class="nav justify-content-center p-3" id="tradingTab" role="tablist">
@@ -408,7 +423,7 @@
                 <div class="row">
                     <div class="col-lg-3 mt-5">
                         <div class="footer-logo text-center text-md-left">
-                            <img src="assets/images/logo-tomochain-black.svg" alt="Tomochain">
+                            <img src="assets/images/logo-tomodex.svg" alt="tomodex">
                         </div>
                         <ul class="social-list d-flex align-items-center justify-content-between mt-4">
                             <li class="social-item">
