--- a/index.html
+++ b/index.html
@@ -273,22 +273,22 @@
                 <div id="watch-videos" class="col-lg-6">
                     <div class="tab-content mt-5" id="tradingTabContent">
                         <div class="tab-pane fade show active" id="trading-spot" role="tabpanel" aria-labelledby="trading-spot-tab">
-                            <a href="javascript:void(0)" class="video1">
+                            <a href="javascript:void(0)" id="play-video-one" class="video1">
                                 <img class="w-100" src="assets/images/dex-video-tutorials-trading.png" alt="">
                             </a>
                             <div class="vidBox1">
                                 <div class="videCont1">
-                                    <iframe class="v1" src="https://www.youtube.com/embed/k5ziJlU1w4w" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                    <iframe id="video-one" class="player v1" src="https://www.youtube.com/embed/k5ziJlU1w4w?rel=0" frameborder="0" allowfullscreen></iframe>
                                 </div>
                             </div>
                         </div>
                         <div class="tab-pane fade" id="trading-lending" role="tabpanel" aria-labelledby="trading-lending-tab">
-                            <a href="javascript:void(0)" class="video2">
+                            <a href="javascript:void(0)" id="play-video-two" class="video2">
                                 <img class="w-100" src="assets/images/dex-video-tutorials-trading.png" alt="">
                             </a>
                             <div class="vidBox2">
                                 <div class="videCont1">
-                                    <iframe class="v2" src="https://www.youtube.com/embed/W581FlByr7I" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                    <iframe id="video-two" class="player v2" src="https://www.youtube.com/embed/W581FlByr7I?rel=0" frameborder="0" allowfullscreen></iframe>
                                 </div>
                             </div>
                         </div>
