add lending markets

--- a/index.html
+++ b/index.html
@@ -155,20 +155,20 @@
                         <div class="tab-pane fade" id="dex-lending" role="tabpanel" aria-labelledby="lending-tab">
                             <div class="common-preview justify-content-between my-3">
                                 <p class="common-meta" id="number-coins2">1509 coins listed</p>
-                                <a class="common-link" href="/markets">View all</a>
+                                <a class="common-link" href="/markets/lending">View all</a>
                             </div>
                             <div class="table-responsive">
                                 <table class="table tomodex-table">
                                     <thead>
                                         <tr>
-                                            <th scope="col">Pair2</th>
-                                            <th scope="col">Last Price2</th>
-                                            <th scope="col">24H Change2</th>
-                                            <th scope="col">24H Volume2</th>
+                                            <th scope="col">Pair</th>
+                                            <th scope="col">Last Interest</th>
+                                            <th scope="col">24H Change</th>
+                                            <th scope="col">24H Volume</th>
                                         </tr>
                                         <tr><td></td></tr>
                                     </thead>
-                                    <tbody id="markets-table-body">
+                                    <tbody id="markets-table-body2">
                                         <tr>
                                             <td colspan="4" class="text-center">
                                                 <div class="spinner-border text-info" role="status">
@@ -515,6 +515,7 @@
     <!-- Custom scripts for this template -->
     <script src="js/dex-custom.js"></script>
     <script src="js/markets.js"></script>
+    <script src="js/lending-markets.js"></script>
 
 </body>
 
