update tab Lending for VN

--- a/vi.html
+++ b/vi.html
@@ -161,14 +161,14 @@
                                 <table class="table tomodex-table">
                                     <thead>
                                         <tr>
-                                            <th scope="col">Pair2</th>
-                                            <th scope="col">Last Price2</th>
-                                            <th scope="col">24H Change2</th>
-                                            <th scope="col">24H Volume2</th>
+                                            <th scope="col">Pair</th>
+                                            <th scope="col">Last Interest</th>
+                                            <th scope="col">24H Change</th>
+                                            <th scope="col">24H Volume</th>
                                         </tr>
                                         <tr><td></td></tr>
                                     </thead>
-                                    <tbody id="markets-table-body">
+                                    <tbody id="markets-table-body2">
                                         <tr>
                                             <td colspan="4" class="text-center">
                                                 <div class="spinner-border text-info" role="status">
