--- a/vi.html
+++ b/vi.html
@@ -70,11 +70,11 @@
                     <li class="dropdown nav-item">
                         <a class="dropdown-toggle nav-link" href="#" role="button" id="dropdownMenuLink"
                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Vietnamese
+                            Việt Nam
                         </a>
                         <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
                             <a class="dropdown-item" href="index.html">English</a>
-                            <a class="dropdown-item" href="vi.html">Vietnamese</a>
+                            <a class="dropdown-item" href="vi.html">Việt Nam</a>
                         </div>
                     </li>
                 </ul>
@@ -87,8 +87,8 @@
         <!-- <div class="visual-chart"><img src="assets/images/visual-chart.svg" alt="chart"></div> -->
         <div class="container">
             <div class="site-heading">
-                <h1>Giao Dịch Trực Tiếp <br>
-                    Từ Ví(Wallet) Của Bạn</h1>
+                <h1>Giao dịch tức thời<br>
+                    trực tiếp từ ví của bạn</h1>
                 <div class="subheading mt-3">giao dịch ngang hàng 100% bảo mật - cung cấp bởi TomoChain</div>
                 <div class="box-btn mt-3 pt-3 mt-md-5 pt-md-5">
                     <a class="btn btn-primary d-flex d-md-inline-flex align-items-center justify-content-center"
@@ -515,7 +515,7 @@
     <!-- Custom scripts for this template -->
     <script src="js/dex-custom.js"></script>
     <script src="js/markets.js"></script>
-
+    <script src="js/lending-markets.js"></script>
 </body>
 
 </html>
