--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
                     <li class="dropdown nav-item">
                         <a class="dropdown-toggle nav-link" href="#" role="button" id="dropdownMenuLink"
                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            English
+                            Tiếng Việt
                         </a>
                         <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
                             <a class="dropdown-item" href="index.html">English</a>
-                            <a class="dropdown-item" href="vi.html">Vietnamese</a>
+                            <a class="dropdown-item" href="vi.html">Tiếng Việt</a>
                         </div>
                     </li>
                 </ul>
