--- a/vi.html
+++ b/vi.html
@@ -89,7 +89,7 @@
             <div class="site-heading">
                 <h1>Giao dịch tức thời<br>
                     trực tiếp từ ví của bạn</h1>
-                <div class="subheading mt-3">giao dịch ngang hàng 100% bảo mật - cung cấp bởi TomoChain</div>
+                <div class="subheading mt-3">Giao dịch ngang hàng 100% bảo mật - cung cấp bởi TomoChain</div>
                 <div class="box-btn mt-3 pt-3 mt-md-5 pt-md-5">
                     <a class="btn btn-primary d-flex d-md-inline-flex align-items-center justify-content-center"
                         href="/trade"><i class="dex-multiline_chart"></i> Bắt đầu giao dịch</a>
