--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
                 <div class="col-md-6 col-lg-3 py-4 py-md-5 d-flex d-md-block">
                     <div class="mb-md-5 size-image-exchange"><img src="assets/images/dex-deposit-withdrawal.svg" alt=""></div>
                     <div class="exchange-infor pl-4 pl-md-0">
-                        <h3 class="tmp-title-medium text-green mb-3">No Deposit/Withdrawl Fees</h3>
+                        <h3 class="tmp-title-medium text-green mb-3">No Deposit/Withdrawal Fees</h3>
                         <p class="text-white">
                             No deposit/withdrawal is required to start trading, and therefore, no unreasonable fees!
                         </p>
