--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     <li class="dropdown nav-item">
                         <a class="dropdown-toggle nav-link" href="#" role="button" id="dropdownMenuLink"
                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Tiếng Việt
+                            English
                         </a>
                         <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
                             <a class="dropdown-item" href="index.html">English</a>
