--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 
     <!-- META FOR FACEBOOK -->
     <meta content="TomoChain" property="og:site_name"/>
-    <meta property="og:url" itemprop="url" content="https://dex.devnet.tomochain.com/"/>
+    <meta property="og:url" itemprop="url" content="https://dex.tomochain.com/"/>
     <meta property="og:image" itemprop="thumbnailUrl" content="https://raw.githubusercontent.com/tomochain/tomox-sdk-ui/master/public/share-society.png"/>
     <meta content="TomoDEX | Decentralized Exchange" itemprop="headline" property="og:title"/>
     <meta content="TomoDEX is the first DEX on TomoChain, using TomoX protocol. The company that operates TomoDEX exchange is the TomoChain team. On this exchange people can trade: buy or sell their tokens." itemprop="description" property="og:description"/>
     <!-- END META FOR FACEBOOK -->
     <!-- Twitter Card -->
     <meta name="twitter:card" value="summary_large_image">
-    <meta name="twitter:url" content="https://dex.devnet.tomochain.com/">
+    <meta name="twitter:url" content="https://dex.tomochain.com/">
     <meta name="twitter:title" content="TomoDEX | Decentralized Exchange">
     <meta name="twitter:description" content="TomoDEX is the first DEX on TomoChain, using TomoX protocol. The company that operates TomoDEX exchange is the TomoChain team. On this exchange people can trade: buy or sell their tokens.">
     <meta name="twitter:image" content="https://raw.githubusercontent.com/tomochain/tomox-sdk-ui/master/public/share-society.png"/>
