--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <!-- Custom styles for this template -->
     <link href="css/dex-custom.css" rel="stylesheet">
     <!-- Custom styles for this template -->
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon_15_05_20.png">
 </head>
 
 <body>
