--- a/vi.html
+++ b/vi.html
@@ -52,18 +52,18 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="/markets">Thị trường</a>
+                        <a class="nav-link" href="https://dex.tomochain.com/markets/trading">Mua bán</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/trade">Giao dịch</a>
+                        <a class="nav-link" href="https://dex.tomochain.com/markets/lending">Vay</a>
                     </li>
                 </ul>
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link btn-signup" href="/create">Đăng ký</a>
+                        <a class="nav-link btn-signup" href="https://wallet.tomochain.com/#/create-new-wallet">Đăng ký</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link btn-login" href="/unlock">Đăng Nhập</a>
+                        <a class="nav-link btn-login" href="https://dex.tomochain.com/unlock">Đăng Nhập</a>
                     </li>
                 </ul>
                 <ul class="navbar-nav">
@@ -276,7 +276,7 @@
                             </a>
                             <div class="vidBox1">
                                 <div class="videCont1">
-                                    <iframe id="video-one" class="player v1" src="https://www.youtube.com/embed/k5ziJlU1w4w?rel=0" frameborder="0" allowfullscreen></iframe>
+                                    <iframe width="560" height="315" src="https://www.youtube.com/embed/tYxDo1DE-Yo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                                 </div>
                             </div>
                         </div>
@@ -447,13 +447,13 @@
                                     <div class="menu-footermenu">
                                         <ul class="menu">
                                             <li class="menu-item">
-                                                <a href="#">Điều khoản sử dụng</a>
+                                                <a href="https://docs.tomochain.com/tomodex/terms-of-use" target="_blank">Điều khoản sử dụng</a>
                                             </li>
                                             <li class="menu-item">
-                                                <a href="https://medium.com/tomochain/tagged/tomodex" target="_blank">Thông báo</a>
+                                                <a href="https://docs.tomochain.com/tomodex/user-agreement-for-tomodex-lending-service" target="_blank">Thoả thuận người dùng</a>
                                             </li>
                                             <li class="menu-item">
-                                                <a href="#">Biểu phí</a>
+                                                <a href="https://docs.tomochain.com/tomodex/tomodex-trading/fee-structure" target="_blank">Biểu phí</a>
                                             </li>
                                         </ul>
                                     </div>
@@ -465,10 +465,10 @@
                                     <div class="menu-footermenu">
                                         <ul class="menu">
                                             <li class="menu-item">
-                                                <a href="https://tomochain.com/" target="_blank">TomoChain</a>
+                                                <a href="https://tomochain.com/vi/home" target="_blank">TomoChain</a>
                                             </li>
                                             <li class="menu-item">
-                                                <a href="https://tomochain.com/tomox/" target="_blank">TomoX</a>
+                                                <a href="https://tomochain.com/vi/tomox/" target="_blank">TomoX</a>
                                             </li>
                                             <li class="menu-item">
                                                 <a href="http://relayer.tomochain.com" target="_blank">TomoRelayer</a>
@@ -483,13 +483,13 @@
                                     <div class="menu-footermenu">
                                         <ul class="menu">
                                             <li class="menu-item">
-                                                <a href="https://docs.tomochain.com/faq" target="_blank">Câu hỏi thường gặp</a>
+                                                <a href="https://docs.tomochain.com/tomodex/tomodex-trading/faq" target="_blank">Câu hỏi thường gặp</a>
                                             </li>
                                             <li class="menu-item">
-                                                <a href="#" target="_blank">Trung tâm trợ giúp</a>
+                                                <a href="https://forms.gle/ZfSGFSq2SqJ9a4UG6" target="_blank">Niêm yết token</a>
                                             </li>
                                             <li class="menu-item">
-                                                <a href="#" target="_blank">Gửi yêu cầu trợ giúp</a>
+                                                <a href="https://forms.gle/CxrDYvmsvymBA4Lj9" target="_blank">Gửi yêu cầu trợ giúp</a>
                                             </li>
                                             <li class="menu-item">
                                                 <a href="https://apidocs.tomochain.com/#tomodex-apis" target="_blank">Tài liệu API</a>
