--- a/index.html
+++ b/index.html
@@ -52,18 +52,18 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="/markets">Markets</a>
+                        <a class="nav-link" href="https://dex.tomochain.com/markets/trading">Spot</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/trade">Exchange</a>
+                        <a class="nav-link" href="https://dex.tomochain.com/markets/lending">Lending</a>
                     </li>
                 </ul>
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link btn-signup" href="/create">Sign up</a>
+                        <a class="nav-link btn-signup" href="https://wallet.tomochain.com/#/create-new-wallet">Sign up</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link btn-login" href="/unlock">Login</a>
+                        <a class="nav-link btn-login" href="https://dex.tomochain.com/unlock">Login</a>
                     </li>
                 </ul>
                 <ul class="navbar-nav">
@@ -276,7 +276,7 @@
                             </a>
                             <div class="vidBox1">
                                 <div class="videCont1">
-                                    <iframe id="video-one" class="player v1" src="https://www.youtube.com/embed/k5ziJlU1w4w?rel=0" frameborder="0" allowfullscreen></iframe>
+                                    <iframe width="560" height="315" src="https://www.youtube.com/embed/tYxDo1DE-Yo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                                 </div>
                             </div>
                         </div>
@@ -447,13 +447,13 @@
                                     <div class="menu-footermenu">
                                         <ul class="menu">
                                             <li class="menu-item">
-                                                <a href="#">Terms of Service</a>
+                                                <a href="https://docs.tomochain.com/tomodex/terms-of-use" target="_blank">Terms of Use</a>
                                             </li>
                                             <li class="menu-item">
-                                                <a href="https://medium.com/tomochain/tagged/tomodex" target="_blank">Announcements</a>
+                                                <a href="https://docs.tomochain.com/tomodex/user-agreement-for-tomodex-lending-service" target="_blank">User Agreement</a>
                                             </li>
                                             <li class="menu-item">
-                                                <a href="#">Fee Structure</a>
+                                                <a href="https://docs.tomochain.com/tomodex/tomodex-trading/fee-structure" target="_blank">Fee Structure</a>
                                             </li>
                                         </ul>
                                     </div>
@@ -483,13 +483,13 @@
                                     <div class="menu-footermenu">
                                         <ul class="menu">
                                             <li class="menu-item">
-                                                <a href="https://docs.tomochain.com/faq" target="_blank">FAQ</a>
+                                                <a href="https://docs.tomochain.com/tomodex/tomodex-trading/faq" target="_blank">FAQ</a>
                                             </li>
                                             <li class="menu-item">
-                                                <a href="#" target="_blank">Support Center</a>
+                                                <a href="https://forms.gle/ZfSGFSq2SqJ9a4UG6" target="_blank">Token Listing Application</a>
                                             </li>
                                             <li class="menu-item">
-                                                <a href="#" target="_blank">Submit a request</a>
+                                                <a href="https://forms.gle/CxrDYvmsvymBA4Lj9" target="_blank">Submit a request</a>
                                             </li>
                                             <li class="menu-item">
                                                 <a href="https://apidocs.tomochain.com/#tomodex-apis" target="_blank">API Documentation</a>
