--- a/vi.html
+++ b/vi.html
@@ -44,12 +44,10 @@
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
         <div class="container">
             <a class="navbar-brand" href="/"><img src="assets/images/logo-tomodex.svg" alt="logo-tomodex"></a>
-            <button class="navbar-toggler navbar-toggler-right collapsed" type="button" data-toggle="tab"
-                data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
-                aria-label="Toggle navigation">
+            <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <i class="fas fa-bars"></i>
             </button>
-            <div class="collapse navbar-collapse" id="navbarResponsive">
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
                         <a class="nav-link" href="https://dex.tomochain.com/markets/trading">Mua bán</a>
@@ -116,9 +114,9 @@
                                     <li class="nav-item">
                                         <a class="px-3 cursor-pointer active" id="spot-tab" data-toggle="tab" href="#dex-spot" role="tab" aria-controls="dex-spot" aria-selected="true">Mua bán ngay</a>
                                     </li>
-                                    <li class="nav-item">
+                                    <!-- <li class="nav-item">
                                         <a class="px-3 cursor-pointer" id="lending-tab" data-toggle="tab" href="#dex-lending" role="tab" aria-controls="dex-lending" aria-selected="false">Vay</a>
-                                    </li>
+                                    </li> -->
                                 </ul>
                             </div>
                         </div>
@@ -152,7 +150,7 @@
                                 </table>
                             </div>
                         </div>
-                        <div class="tab-pane fade" id="dex-lending" role="tabpanel" aria-labelledby="lending-tab">
+                        <!-- <div class="tab-pane fade" id="dex-lending" role="tabpanel" aria-labelledby="lending-tab">
                             <div class="common-preview justify-content-between my-3">
                                 <p class="common-meta" id="number-coins2">1509 coins listed</p>
                                 <a class="common-link" href="/markets">Xem thêm</a>
@@ -179,7 +177,7 @@
                                     </tbody>
                                 </table>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
                 <div class="col-lg-4">
@@ -280,7 +278,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="tab-pane fade" id="trading-lending" role="tabpanel" aria-labelledby="trading-lending-tab">
+                        <!-- <div class="tab-pane fade" id="trading-lending" role="tabpanel" aria-labelledby="trading-lending-tab">
                             <a href="javascript:void(0)" id="play-video-two" class="video2">
                                 <img class="w-100" src="assets/images/dex-video-tutorials-trading.png" alt="">
                             </a>
@@ -289,15 +287,15 @@
                                     <iframe id="video-two" class="player v2" src="https://www.youtube.com/embed/W581FlByr7I?rel=0" frameborder="0" allowfullscreen></iframe>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                     <ul class="nav justify-content-center p-3" id="tradingTab" role="tablist">
                         <li class="nav-item">
                             <a class="px-3 cursor-pointer active" id="trading-spot-tab" data-toggle="tab" href="#trading-spot" role="tab" aria-controls="trading-spot" aria-selected="true">Mua bán ngay</a>
                         </li>
-                        <li class="nav-item">
+                        <!-- <li class="nav-item">
                             <a class="px-3 cursor-pointer" id="trading-lending-tab" data-toggle="tab" href="#trading-lending" role="tab" aria-controls="trading-lending" aria-selected="false">Vay</a>
-                        </li>
+                        </li> -->
                     </ul>
                 </div>
             </div>
