--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="https://dex.tomochain.com/markets/trading">Spot</a>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link" href="https://dex.tomochain.com/markets/lending">Lending</a>
-                    </li>
+                    </li> -->
                 </ul>
                 <ul class="navbar-nav">
                     <li class="nav-item">
