--- a/vi.html
+++ b/vi.html
@@ -451,7 +451,7 @@
                                                 <a href="https://docs.tomochain.com/tomodex/user-agreement-for-tomodex-lending-service" target="_blank">Thoả thuận người dùng</a>
                                             </li>
                                             <li class="menu-item">
-                                                <a href="https://docs.tomochain.com/tomodex/tomodex-trading/fee-structure" target="_blank">Biểu phí</a>
+                                                <a href="https://docs.tomochain.com/tomodex/privacy-policy" target="_blank">Bảo mật thông tin</a>
                                             </li>
                                         </ul>
                                     </div>
@@ -481,13 +481,16 @@
                                     <div class="menu-footermenu">
                                         <ul class="menu">
                                             <li class="menu-item">
-                                                <a href="https://docs.tomochain.com/tomodex/tomodex-trading/faq" target="_blank">Câu hỏi thường gặp</a>
+                                                <a href="https://docs.tomochain.com/tomodex/faq" target="_blank">Câu hỏi thường gặp</a>
+                                            </li>
+                                            <li class="menu-item">
+                                                <a href="https://docs.tomochain.com/tomodex/tomodex-fee" target="_blank">Phí giao dịch</a>
+                                            </li>
+                                            <li class="menu-item">
+                                                <a href="https://forms.gle/cU1XU3b8EUMxB6yA6" target="_blank">Gửi yêu cầu trợ giúp</a>
                                             </li>
                                             <li class="menu-item">
                                                 <a href="https://forms.gle/ZfSGFSq2SqJ9a4UG6" target="_blank">Niêm yết token</a>
-                                            </li>
-                                            <li class="menu-item">
-                                                <a href="https://forms.gle/CxrDYvmsvymBA4Lj9" target="_blank">Gửi yêu cầu trợ giúp</a>
                                             </li>
                                             <li class="menu-item">
                                                 <a href="https://apidocs.tomochain.com/#tomodex-apis" target="_blank">Tài liệu API</a>
