--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
                                                 <a href="https://docs.tomochain.com/tomodex/user-agreement-for-tomodex-lending-service" target="_blank">User Agreement</a>
                                             </li>
                                             <li class="menu-item">
-                                                <a href="https://docs.tomochain.com/tomodex/tomodex-trading/fee-structure" target="_blank">Fee Structure</a>
+                                                <a href="https://docs.tomochain.com/tomodex/privacy-policy" target="_blank">Privacy Policy</a>
                                             </li>
                                         </ul>
                                     </div>
@@ -481,13 +481,16 @@
                                     <div class="menu-footermenu">
                                         <ul class="menu">
                                             <li class="menu-item">
-                                                <a href="https://docs.tomochain.com/tomodex/tomodex-trading/faq" target="_blank">FAQ</a>
+                                                <a href="https://docs.tomochain.com/tomodex/faq" target="_blank">FAQ</a>
+                                            </li>
+                                            <li class="menu-item">
+                                                <a href="https://docs.tomochain.com/tomodex/tomodex-fee" target="_blank">Fee Structuree</a>
+                                            </li>
+                                            <li class="menu-item">
+                                                <a href="https://forms.gle/cU1XU3b8EUMxB6yA6" target="_blank">Submit a Request</a>
                                             </li>
                                             <li class="menu-item">
                                                 <a href="https://forms.gle/ZfSGFSq2SqJ9a4UG6" target="_blank">Token Listing Application</a>
-                                            </li>
-                                            <li class="menu-item">
-                                                <a href="https://forms.gle/CxrDYvmsvymBA4Lj9" target="_blank">Submit a request</a>
                                             </li>
                                             <li class="menu-item">
                                                 <a href="https://apidocs.tomochain.com/#tomodex-apis" target="_blank">API Documentation</a>
