update link social

--- a/index.html
+++ b/index.html
@@ -426,10 +426,10 @@
                                 <a href="https://www.facebook.com/tomochainofficial" target="_blank" title="facebook"><i class="fab fa-facebook-square"></i></a>
                             </li>
                             <li class="social-item">
-                                <a href="https://twitter.com/TomoChainANN" target="_blank" title="twitter"><i class="fab fa-twitter"></i></a>
+                                <a href="https://twitter.com/TomoDexOfficial" target="_blank" title="twitter"><i class="fab fa-twitter"></i></a>
                             </li>
                             <li class="social-item">
-                                <a href="https://t.me/TomoChainChannel" target="_blank" title="telegram"><i class="fab fa-telegram-plane"></i></a>
+                                <a href="https://t.me/TomoDEX_Official" target="_blank" title="telegram"><i class="fab fa-telegram-plane"></i></a>
                             </li>
                             <li class="social-item">
                                 <a href="https://github.com/tomochain" target="_blank" title="github"><i class="fab fa-github"></i></a>
