--- a/vi.html
+++ b/vi.html
@@ -106,10 +106,10 @@
                 <div class="col-lg-8">
                     <div class="inner-box">
                         <div class="row align-items-end">
-                            <div class="col-4 col-lg-3">
+                            <div class="col-4 col-xl-3">
                                 <h2 class="common-title m-0">Thị trường</h2>
                             </div>
-                            <div class="col-8 col-lg-9">
+                            <div class="col-8 col-xl-9">
                                 <ul class="nav" id="MarketsTab" role="tablist">
                                     <li class="nav-item">
                                         <a class="px-3 cursor-pointer active" id="spot-tab" data-toggle="tab" href="#dex-spot" role="tab" aria-controls="dex-spot" aria-selected="true">Mua bán ngay</a>
