--- a/vi.html
+++ b/vi.html
@@ -124,7 +124,7 @@
                     <div class="tab-content" id="MarketsTabContent">
                         <div class="tab-pane fade show active" id="dex-spot" role="tabpanel" aria-labelledby="spot-tab">
                             <div class="common-preview justify-content-between my-3">
-                                <p class="common-meta" id="number-coins">15 coins listed</p>
+                                <p class="common-meta" id="number-coins">Danh sách Token: 15 đồng</p>
                                 <a class="common-link" href="/markets">Xem thêm</a>
                             </div>
                             <div class="table-responsive">
