--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
                 <div class="subheading mt-3">100% secured Peer to Peer trading - powered by TomoChain technologies</div>
                 <div class="box-btn mt-3 pt-3 mt-md-5 pt-md-5">
                     <a class="btn btn-primary d-flex d-md-inline-flex align-items-center justify-content-center"
-                        href="/trade"><i class="dex-multiline_chart"></i> Start Trading</a>
-                    <span id="btn_scroll_to" class="btn btn-primary-transparent d-flex d-md-inline-flex align-items-center justify-content-center ml-md-3 mt-3 mt-md-0">
+                        href="/trade/"><i class="dex-multiline_chart"></i> Start Trading</a>
+                    <span id="btn_scroll_to" class="btn btn-primary-transparent pointer d-flex d-md-inline-flex align-items-center justify-content-center ml-md-3 mt-3 mt-md-0">
                         <i class="dex-play_circle_outline"></i> Watch videos
                     </a>
                 </div>
@@ -365,7 +365,7 @@
                             </p>
                         </div>
                         <div class="d-flex align-items-end w-100 mt-5">
-                            <a class="btn-primary-medium w-100 d-flex align-items-center justify-content-center" href="/trade">Start Trading</a>
+                            <a class="btn-primary-medium w-100 d-flex align-items-center justify-content-center" href="/trade/">Start Trading</a>
                         </div>
                     </div>
                 </div>
