--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@
                                                 <a href="https://docs.tomochain.com/tomodex/faq" target="_blank">FAQ</a>
                                             </li>
                                             <li class="menu-item">
-                                                <a href="https://docs.tomochain.com/tomodex/tomodex-fee" target="_blank">Fee Structuree</a>
+                                                <a href="https://docs.tomochain.com/tomodex/tomodex-fee" target="_blank">Fee Structure</a>
                                             </li>
                                             <li class="menu-item">
                                                 <a href="https://forms.gle/cU1XU3b8EUMxB6yA6" target="_blank">Submit a Request</a>
