change link sign-up

--- a/vi.html
+++ b/vi.html
@@ -58,7 +58,7 @@
                 </ul>
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link btn-signup" href="https://wallet.tomochain.com/#/create-new-wallet">Đăng ký</a>
+                        <a class="nav-link btn-signup" href="/create/">Đăng ký</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link btn-login" href="https://dex.tomochain.com/unlock">Đăng Nhập</a>
