--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 </ul>
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link btn-signup" href="https://wallet.tomochain.com/#/create-new-wallet">Sign up</a>
+                        <a class="nav-link btn-signup" href="/create/">Sign up</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link btn-login" href="https://dex.tomochain.com/unlock">Login</a>
