--- a/vi.html
+++ b/vi.html
@@ -36,6 +36,15 @@
     <link href="css/dex-custom.css" rel="stylesheet">
     <!-- Custom styles for this template -->
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon_15_05_20.png">
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-124597188-6"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'UA-124597188-6');
+    </script>
 </head>
 
 <body>
