change text: coins to pairs

--- a/vi.html
+++ b/vi.html
@@ -133,7 +133,7 @@
                     <div class="tab-content" id="MarketsTabContent">
                         <div class="tab-pane fade show active" id="dex-spot" role="tabpanel" aria-labelledby="spot-tab">
                             <div class="common-preview justify-content-between my-3">
-                                <p class="common-meta" id="number-coins">Danh sách Token: 15 đồng</p>
+                                <p class="common-meta" id="number-coins">6 pairs listed</p>
                                 <a class="common-link" href="/markets">Xem thêm</a>
                             </div>
                             <div class="table-responsive">
@@ -161,7 +161,7 @@
                         </div>
                         <div class="tab-pane fade" id="dex-lending" role="tabpanel" aria-labelledby="lending-tab">
                             <div class="common-preview justify-content-between my-3">
-                                <p class="common-meta" id="number-coins2">1509 coins listed</p>
+                                <p class="common-meta" id="number-coins2">8 pairs listed</p>
                                 <a class="common-link" href="/markets">Xem thêm</a>
                             </div>
                             <div class="table-responsive">
